--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <h1>{% block title %} Contacts {% endblock %}</h1>
     {% for contact in contacts %}
         <div class='contact'>
+            <p>{{ contact['id'] }}</p>
             <p>{{ contact['created'] }}</p>
             <h2>{{ contact['name'] }}</h2>
             <p>{{ contact['last_name'] }}</p>
